package fantasybit;

message PlayerStatus {
    enum Status {
            ACTIVE = 0;
            INACTIVE = 1;
            OTHER = 3;
            FA = 4;
    }

    enum WeekStatus {
            OUT = 0;
            IN = 1;
            NA = 2;
    }

    optional string teamid = 20;
    optional Status status = 60;
    optional WeekStatus wstatus = 30;
}

message GameStatus {
    enum Status {
        SCHEDULED = 0;
        PREGAME = 2;
        INGAME = 3;
        CLOSED = 4;
    }

    optional Status status = 10;
    optional uint32 datetime  = 20;
}

message TeamRoster {
    repeated string playerid = 10;
}
